--- a/assets/styles.css
+++ b/assets/styles.css
@@ -8,7 +8,8 @@ body {
     background-color: whitesmoke;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: black;
-    /* display: flex; */
+    display: flex;
+    /* want to make the whole page horizontal so adding display flex to the body selector */
     width: 100%;
 }
 
@@ -61,12 +62,29 @@ nav a {
 /* I just want to comment on how many times I went back and forth with the positioning, displays, lists, how to place the text in the way I wanted - I am literally typing this at 5am after being up for almost 24 hours. It needed to be fixed. The element that finally fixed the positioning of the text in the navigation bar was "display:list-item" */
 
 main {
-    display: block;
-    /* flex-direction:column; */
-    margin-right: 30%;
+    display: flex;
+    flex-direction:column;
+    margin-left: 25%;
+    align-items: center; 
+    /* we changed this the flex direction to colummn and aligning items in center because we want to view the image I will add horizontilly  */
     /* padding-left: 30%; */
     /* z-index: 100 */
-    /* width: 100vh; */
+    width: 100%;
+    position: relative;
+}
+
+#Adjoa_header {
+    position:absolute;
+    color: black;
+    font-size: 75px;
+}
+
+#Adjoa_image {
+    background-image: url("./2FEE48C8-8869-480A-A5DB-7E1A5E20402A.JPEG");
+    width: 100%;
+    height: auto;
+    aspect-ratio: 1838/2499;
+    background-size: cover;
 }
 
 /* section {
@@ -75,12 +93,12 @@ main {
 
 }  */
 
-main section img {
+/* main section img {
     position: absolute;
     width:100%;
-    /* height: 100%; */
+    height: 100%;
     z-index: 2;
-}
+} */
 
 /* .center-image {
     background-image: url(./2FEE48C8-8869-480A-A5DB-7E1A5E20402A.JPEG);
@@ -90,13 +108,13 @@ main section img {
     /* z-index: index 1;
 } */ 
 
-#Adjoa {
+/* #Adjoa {
   position: absolute;
-  /* z-index: 1; */
+  z-index: 1;
   font-size: 50px;
   left: 500px;
   margin: -10px;
-}
+} */
 
 /* p .aspire {
     position:absolute;
