pushing a bunch of changes so I can make a project page and update my portfolio

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -141,12 +141,12 @@ main {
     padding: 3%;
 } */
 
-img {
+/* img {
     width: 100%;
     height: auto;
-}
+} */
 
-#My-Projects {
+/* #My-Projects {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     width: 100%;
     font-size: 20px;
@@ -181,7 +181,7 @@ img {
 .other-projects {
     width: 48%;
     height: auto;
-}
+} */
 
 /* section p {
     text-align: left;
